GNOME Bugzilla – Bug 724182
gst-rtsp-server: stop thread if media is shared
Last modified: 2014-02-25 22:28:34 UTC
Before preparing the media, a thread is obtained from the thread pool. This thread is given to gst_rtsp_media_prepare() and used there. However, if the media is already preapred (e.g. media is shared) the thread is not used, so a leak occurs.
Created attachment 268855 [details] [review] stop thread if media is already prepared
commit 0bd687f2107f613d33060484fa86159c288d4a1e Author: Aleix Conchillo Flaqué <aleix@oblong.com> Date: Tue Feb 11 14:20:39 2014 -0800 media: stop thread if media is already prepared in gst_rtsp_media_prepare() the thread is not used if media is already prepared (e.g. media shared) so we want to stop the thread. otherwise, a leak occurs. https://bugzilla.gnome.org/show_bug.cgi?id=724182